--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Hey World! I'm developing this website. Please come back after sometime.
+<p style="color: red;">Hey World! I'm developing this website. Please come back after sometime.</p>
