--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <a href="#" class="facebook" style="display: none;"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram" style="display: none;"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="google-plus" style="display: none;"><i class="bx bxl-skype"></i></a>
-          <a href="https://www.linkedin.com/in/bhuvnesh-kumar-2753885a/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/bhuvnesh-kumar-2753885a/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
